# Selfsame

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-java-central.yml  release-java.yml  release-node.yml  release.yml
SPEC/: protocol.md
SPEC/conformance/: README.md
SPEC/conformance/cases/: canonical-comparison.json  soundness-verdicts.json
SPEC/schemas/: canonical.schema.json  capture.schema.json  report.schema.json
coverage_probe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
demo/: selfsame.tape  setup.sh
docs/: README.md  adjudicator.md  ai-workflows.md  architecture.md  commands.md  configuration.md  getting-started.md  how-it-works.md  languages.md  limitations.md
examples/: calc_after.py  calc_before.py
experiments/: FINDINGS.md  corpus_after.py  corpus_before.py  measure.py  real_repo.py
name-claim/: CLAIMING.md
name-claim/crates/: Cargo.toml
name-claim/crates/src/: lib.rs
name-claim/npm/: README.md  index.js  package.json
name-claim/pypi/: README.md  pyproject.toml
name-claim/pypi/selfsame/: __init__.py
probe/: __init__.py  _adjudicate_worker.py  _capture_hook.py  _cgfuzz_worker.py  _fuzz_worker.py  _mutate.py  _procs.py  _replay_worker.py  _worker.py  adjudicate.py  attach.py  canonical.py  capture.py  check.py  cli.py  equality.py  extract.py  fuzz.py  generators.py  harness.py  model.py  pytest_plugin.py  replay.py  runner.py  snapshot.py  verify.py
tests/: test_probe.py
units/: __init__.py  env.py  io.py  pure.py
