[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "selfsame"
version = "0.2.0"
description = "Sound behavior-equivalence verification for refactors, using your own tests for inputs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "PraveenKPandu" }]
keywords = ["refactoring", "equivalence", "testing", "verification", "ci"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/PraveenKPandu/Selfsame"

[project.scripts]
selfsame = "probe.cli:main"
probe = "probe.cli:main"

[project.entry-points.pytest11]
selfsame = "probe.pytest_plugin"

[tool.setuptools]
packages = ["probe", "units"]

[tool.ruff]
target-version = "py38"
line-length = 100
extend-exclude = ["name-claim", "experiments"]

[tool.ruff.lint]
select = ["E", "F", "I"]

